--- a/style.css
+++ b/style.css
@@ -152,3 +152,15 @@ a:hover::after {
   opacity: var(--swiper-pagination-bullet-inactive-opacity, 1) !important;
   border: 1px solid white !important;
 }
+.sticky {
+  background-color: rgba(255, 255, 255, 0.455) !important;
+}
+.sticky a {
+  color: black;
+  font-weight: 700;
+}
+.sticky button {
+  color: black;
+  font-weight: 700;
+  background-color: cyan;
+}
